canary-deployment/apache-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apache-deployment
  namespace: simple-canary
  labels:
    app: web
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
      - name: apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 0.2
            memory: 128Mi
          limits:
            cpu: 0.5
            memory: 256Mi
        volumeMounts:
        - name: apache-config
          mountPath: /usr/local/apache2/htdocs/index.html
          subPath: index.html
      volumes:
      - name: apache-config
        configMap:
          name: apache-config
