canary-deployment/canary-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
  namespace: simple-canary
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
